# communitytoolkit-winui-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
crates/xamltoolkit-winui-controls/: Cargo.toml  README.md  build.rs
crates/xamltoolkit-winui-controls/metadata/: XamlToolkit.WinUI.Controls.winmd
crates/xamltoolkit-winui-controls/metadata/native/ARM64/: XamlToolkit.WinUI.Controls.winmd
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/ColorPicker/: ColorPickerButton.xaml  ColorPickerButton.xbf  ColorPickerSlider.xbf  ColorPreviewer.xaml
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/HeaderedControls/HeaderedContentControl/: HeaderedContentControl.xbf
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/LayoutTransformControl/: LayoutTransformControl.xaml
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/RichSuggestBox/: RichSuggestBox.xaml  RichSuggestBox.xbf
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/Segmented/: Segmented.xbf
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/SettingsControls/SettingsExpander/: SettingsExpander.xaml
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/TabbedCommandBar/: TabbedCommandBarItem.xaml
crates/xamltoolkit-winui-controls/metadata/native/ARM64/XamlToolkit.WinUI.Controls/TokenizingTextBox/: TokenizingTextBoxItem.AutoSuggestBox.xaml  TokenizingTextBoxItem.Token.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/: XamlToolkit.WinUI.Controls.pri  XamlToolkit.WinUI.Controls.winmd
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/CameraPreview/: CameraPreview.xaml
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/ColorPicker/: ColorPicker.xaml  ColorPickerSlider.xaml
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/HeaderedControls/HeaderedContentControl/: HeaderedContentControl.xaml
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/HeaderedControls/HeaderedItemsControl/: HeaderedItemsControl.xaml  HeaderedItemsControl.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/HeaderedControls/HeaderedTreeView/: HeaderedTreeView.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/ImageCropper/: ImageCropperThumb.xaml
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/MetadataControl/: MetadataControl.xaml  MetadataControl.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/RadialGauge/: RadialGauge.xaml
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/RangeSelector/: RangeSelector.xaml  RangeSelector.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/SettingsControls/SettingsCard/: SettingsCard.xaml
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/SettingsControls/SettingsExpander/: SettingsExpander.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/Sizers/: SizerBase.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/TabbedCommandBar/: TabbedCommandBar.xaml  TabbedCommandBar.xbf
crates/xamltoolkit-winui-controls/metadata/native/Win32/XamlToolkit.WinUI.Controls/TokenizingTextBox/: TokenizingTextBox.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/: XamlToolkit.WinUI.Controls.winmd
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/CameraPreview/: CameraPreview.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/ColorPicker/: ColorPicker.xbf  ColorPreviewer.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/ImageCropper/: ImageCropper.xaml  ImageCropper.xbf  ImageCropperThumb.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/LayoutTransformControl/: LayoutTransformControl.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/RadialGauge/: RadialGauge.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/Segmented/: Segmented.xaml  SegmentedItem.xaml  SegmentedItem.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/Sizers/: SizerBase.xaml
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/TabbedCommandBar/: TabbedCommandBarItem.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/Themes/: Generic.xaml  Generic.xbf
crates/xamltoolkit-winui-controls/metadata/native/x64/XamlToolkit.WinUI.Controls/TokenizingTextBox/: TokenizingTextBox.xaml  TokenizingTextBoxItem.AutoSuggestBox.xbf  TokenizingTextBoxItem.Token.xaml
crates/xamltoolkit-winui-controls/src/: lib.rs
crates/xamltoolkit-winui-converters/: Cargo.toml  README.md  build.rs  sync-metadata.ps1
crates/xamltoolkit-winui-converters/metadata/native/ARM64/: XamlToolkit.WinUI.Converters.winmd
crates/xamltoolkit-winui-converters/metadata/native/Win32/: XamlToolkit.WinUI.Converters.pri  XamlToolkit.WinUI.Converters.winmd
crates/xamltoolkit-winui-converters/src/: lib.rs
crates/xamltoolkit-winui-helpers/: Cargo.toml  README.md  build.rs
crates/xamltoolkit-winui-helpers/metadata/native/ARM64/: XamlToolkit.WinUI.Helpers.winmd
crates/xamltoolkit-winui-helpers/metadata/native/Win32/: XamlToolkit.WinUI.Helpers.pri  XamlToolkit.WinUI.Helpers.winmd
crates/xamltoolkit-winui-helpers/metadata/native/x64/: XamlToolkit.WinUI.Helpers.winmd
crates/xamltoolkit-winui-helpers/src/: lib.rs
examples/: controls.rs  converters.rs  helpers.rs  root.rs
examples/demo/: Cargo.toml  README.md  build.rs
examples/demo/src/: main.rs
src/: main.rs
(+20 files in other folders)
