[package]
name = "xamltoolkit-rs"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"
autoexamples = false

[workspace]
members = [
    "crates/xamltoolkit-winui",
    "crates/xamltoolkit-winui-converters",
    "crates/xamltoolkit-winui-helpers",
]
resolver = "2"

[dependencies]
xamltoolkit-winui = { path = "crates/xamltoolkit-winui" }
xamltoolkit-winui-converters = { path = "crates/xamltoolkit-winui-converters" }
xamltoolkit-winui-helpers = { path = "crates/xamltoolkit-winui-helpers" }
windows = { git = "https://github.com/microsoft/windows-rs", features = ["Foundation", "UI"] }
windows-collections = { git = "https://github.com/microsoft/windows-rs" }
windows-core = { git = "https://github.com/microsoft/windows-rs" }
windows-reactor = { git = "https://github.com/microsoft/windows-rs" }

[build-dependencies]
windows-metadata = { git = "https://github.com/microsoft/windows-rs" }
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs" }

[[example]]
name = "root"
path = "examples/root.rs"

[[example]]
name = "converters"
path = "examples/converters.rs"

[[example]]
name = "helpers"
path = "examples/helpers.rs"

