[package]
name = "xamltoolkit-rs"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"
autoexamples = false

[workspace]
members = [
    "crates/wasdk",
    "crates/xamltoolkit-winui",
    "crates/xamltoolkit-winui-converters",
    "crates/xamltoolkit-winui-helpers",
    "crates/xamltoolkit-winui-controls",
]
resolver = "2"

[dependencies]
wasdk = { path = "crates/wasdk" }
xamltoolkit-winui = { path = "crates/xamltoolkit-winui" }
xamltoolkit-winui-converters = { path = "crates/xamltoolkit-winui-converters" }
xamltoolkit-winui-helpers = { path = "crates/xamltoolkit-winui-helpers" }
xamltoolkit-winui-controls = { path = "crates/xamltoolkit-winui-controls" }
windows = { git = "https://github.com/microsoft/windows-rs", features = ["Foundation", "UI"] }
windows-core = { git = "https://github.com/microsoft/windows-rs" }

[[example]]
name = "root"
path = "examples/root.rs"

[[example]]
name = "converters"
path = "examples/converters.rs"

[[example]]
name = "helpers"
path = "examples/helpers.rs"

[[example]]
name = "controls"
path = "examples/controls.rs"

