[package]
name = "toolkit-winui-controls"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
wasdk = { path = "../wasdk" }
toolkit-winui = { path = "../xamltoolkit-winui" }
toolkit-winui-converters = { path = "../xamltoolkit-winui-converters" }
toolkit-winui-helpers = { path = "../xamltoolkit-winui-helpers" }
windows = { git = "https://github.com/microsoft/windows-rs", features = [
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Media",
    "Media_Capture",
    "Media_Capture_Frames",
    "Media_MediaProperties",
    "Storage",
    "Storage_FileProperties",
    "Storage_Search",
    "Storage_Streams",
    "UI",
    "UI_Composition",
    "UI_Core",
    "UI_Text",
] }
windows-core = { git = "https://github.com/microsoft/windows-rs" }
windows-collections = { git = "https://github.com/microsoft/windows-rs" }
windows-future = { git = "https://github.com/microsoft/windows-rs" }
windows-numerics = { git = "https://github.com/microsoft/windows-rs" }
windows-reference = { git = "https://github.com/microsoft/windows-rs" }
windows-time = { git = "https://github.com/microsoft/windows-rs" }

[build-dependencies]
windows-bindgen = { git = "https://github.com/microsoft/windows-rs" }
windows-metadata = { git = "https://github.com/microsoft/windows-rs" }


