[package]
name = "xamltoolkit-winui-converters"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
xamltoolkit-winui = { path = "../xamltoolkit-winui" }
windows = { version = "0.62.2", features = [
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "UI",
    "UI_Composition",
    "UI_Core",
    "UI_Text",
] }
windows-core = "0.62.2"
windows-collections = "0.3.2"
windows-future = "0.3.2"
windows-numerics = "0.3.1"

[build-dependencies]
windows-bindgen = "0.66.0"
