[package]
name = "xamltoolkit-winui-helpers"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
xamltoolkit-winui = { path = "../xamltoolkit-winui" }
windows = { git = "https://github.com/microsoft/windows-rs", features = [
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "Media",
    "Media_Capture_Frames",
    "UI",
    "UI_Composition",
    "UI_Core",
    "UI_Text",
] }
windows-core = { git = "https://github.com/microsoft/windows-rs" }
windows-collections = { git = "https://github.com/microsoft/windows-rs" }
windows-future = { git = "https://github.com/microsoft/windows-rs" }
windows-numerics = { git = "https://github.com/microsoft/windows-rs" }
windows-reference = { git = "https://github.com/microsoft/windows-rs" }
windows-time = { git = "https://github.com/microsoft/windows-rs" }

[build-dependencies]
windows-bindgen = { git = "https://github.com/microsoft/windows-rs" }
